# ai-invention-6d018e-readability-as-circuit-resistance-a-nove

./: README.md
chat/messages/: README.md
chat/messages/3_report_results/: 3_gen_full_paper.md
chat/prompts/: README.md
chat/prompts/3_report_results/: 3_gen_full_paper.md
paper_latex/: paper.tex
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  convert_pdf_to_images.py  paper.aux  paper.bbl  paper.blg  paper.out  references.bib
prompts/: README.md
prompts/1_create_idea/round_1/: 1_gen_hypo.md  2_review_hypo.md
prompts/2_test_idea/round_1/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/2_test_idea/round_2/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/3_report_results/: 3_gen_full_paper.md
prompts/3_report_results/1_gen_viz/: gen_viz_1.md  gen_viz_2.md  gen_viz_3.md
prompts/3_report_results/2_gen_demo_art/: gen_demo_art_dataset_1.md  gen_demo_art_dataset_2.md  gen_demo_art_experiment_1.md  gen_demo_art_experiment_2.md
round-1/dataset-1/: README.md
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  data.py  dataset_summary.md  download_datasets.py  mini_data_out.json  preview_data_out.json  pyproject.toml  sample_dataset.py
round-1/experiment-1/: README.md
round-1/experiment-1/src/: .sdk_openhands_agent_struct_out.json  method.py  method_out.json  method_simple.py  preview_method_out.json  pyproject.toml
round-1/experiment-1/src/circuit_resistance_readability.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
round-1/research-1/: README.md
round-2/dataset-1/: README.md
round-2/dataset-1/src/: .sdk_openhands_agent_struct_out.json  DATASET_SUMMARY.md  data.py  mini_data_out.json  preview_data_out.json  process_clear_corpus.py  pyproject.toml
round-2/experiment-1/: README.md
round-2/experiment-1/src/: .sdk_openhands_agent_struct_out.json  full_method_out.json  method.py  method_50.py  pyproject.toml  quick_test.py  test_method.py  validate.py
round-2/experiment-1/src/readability_resistance_experiment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+76 files in other folders)
