[project]
name = "circuit-resistance-readability"
version = "0.1.0"
description = "Effective resistance metric for text readability using discourse graphs"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.5.0",
    "scipy==1.18.0",
    "scikit-learn==1.9.0",
    "nltk>=3.8",
    "textstat>=0.7",
    "loguru==0.7.3",
    "psutil==7.2.2",
]
