[project]
name = "readability-resistance-experiment"
version = "0.1.0"
description = "Experiment for Readability as Circuit Resistance metric"
requires-python = ">=3.12"
dependencies = [
    "networkx==3.6.1",
    "numpy==2.5.1",
    "scipy>=1.10",
    "loguru==0.7.3",
    "scikit-learn>=1.3",
    "textstat==0.7.13",
    "psutil==7.2.2",
]
